--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="utf-8">
-<title>B5</title>
+<title>DCW D2008G2 DoanTienPhat</title>
 	<link rel="stylesheet" href="CSS/Style.CSS">
 </head>
 
